# lab3_Sreeashish_DevakiJafferSathick

./: .coverage  .dockerignore  .env.example  DEPLOYMENT.md  DockerFile  LOAD_TEST_REPORT.md  Makefile  README.md  deploy.sh  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  sa-key.json  train.py
app/: cloud_main.py  main.py
app/data/: metadata.json  model.json
lab3_script.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py
