[project]
name = "lab3-script"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "numpy", 
    "scikit-learn",
    "xgboost",
    "seaborn",
    "matplotlib",
    "pydantic",
    "python-multipart",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"