[project]
name = "lab3-script"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "seaborn",
    "matplotlib",
    "pydantic",
    "python-multipart",
    "locust>=2.25.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
